--- a/.github/workflows/productionDeploy.yml
+++ b/.github/workflows/productionDeploy.yml
@@ -41,9 +41,9 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
   
-  # The deployProductionCocoapodsSpecs job creates the prod Podspec from template and pushes to cp trunk.
-  deployProductionCocoapodsSpecs:
-    name: deployProductionCocoapodsSpecs
+  # The deployProductionSpecs job creates the prod Podspec and Prod Package.swift from template and pushes to cp trunk.
+  deployProductionSpecs:
+    name: deployProductionSpecs
     runs-on: macos-latest 
     needs: [deployS3Production]
     if: github.ref == 'refs/heads/main'
@@ -80,48 +80,8 @@ jobs:
       env:
          COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
 
-     # SKIP SPM FOR COCOAPODS SPECS DEPLOY JOB
-
-     # At this point we have NewRelicAgent.podspec corresponding to the production build sitting at the repo root.
-     # The following step creates a PR containing that new NewRelicAgent.podspec file at the root of the repo.
-     # Since production builds are infrequent this creates a PR that must be manually approved and merged.
-    - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v3
-      with:
-        path: main
-        title: "[${{ env.version }}] Production Release Cocoapods"
-        branch: "auto-production-release-${{ env.version }}"
-        base: main
-
-  # The deployProductionSPMSpecs job creates the Prod Package.swift from template and pushes to newrelic-ios-agent-spm repo. 
-  # It also creates a PR on newrelic-ios-agent containing the new Prod Package.swift.
-  deployProductionSPMSpecs:
-    name: deployProductionSPMSpecs
-    runs-on: macos-latest 
-    needs: [deployS3Production]
-    if: github.ref == 'refs/heads/main'
-    steps:
-    - name: Checkout Main repo
-      uses: actions/checkout@v3
-      with:
-        path: main
-
-    - name: Checkout SPM
-      uses: actions/checkout@v3
-      with:
-        repository: newrelic/newrelic-ios-agent-spm
-        token: ${{ secrets.SPM_PAT }}
-        path: spm
-
-    - name: Get name
-      run: echo "version=${{needs.deployS3Production.outputs.version}}" >> $GITHUB_ENV
-
-    - name: Print XCFramework name
-      run: echo "${{ env.version }}" 
-
-    # SKIP COCOAPODS PART FOR SPM SPECS DEPLOY JOB
-
    - name: Create Prod Package.swift for XCFramework version
+     if: success() || failure()
      run: |
        cp main/NewRelic-SwiftPackage/Package.swift.template spm/Package.swift
        cd spm
@@ -148,13 +108,13 @@ jobs:
 
        cp Package.swift ../main/
 
-     # At this point we have Package.swift corresponding to the production build sitting at the repo root.
-     # The following step creates a PR containing that new Package.swift file at the root of the repo.
+     # At this point we have NewRelicAgent.podspec and Package.swift corresponding to the production build sitting at the repo root.
+     # The following step creates a PR containing that new NewRelicAgent.podspec and Package.swift file at the root of the repo.
      # Since production builds are infrequent this creates a PR that must be manually approved and merged.
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       with:
         path: main
-        title: "[${{ env.version }}] Production Release SPM"
+        title: "[${{ env.version }}] Production Release"
         branch: "auto-production-release-${{ env.version }}"
         base: main
