--- a/.github/workflows/productionDeploy.yml
+++ b/.github/workflows/productionDeploy.yml
@@ -66,46 +66,46 @@ jobs:
     - name: Print XCFramework name
       run: echo "${{ env.version }}" 
 
-    - name: Create Prod Podspec for XCFramework version
-      run: |
-         cd main
+    # - name: Create Prod Podspec for XCFramework version
+    #   run: |
+    #      cd main
 
-         cp cocoapods/NewRelicAgent.podspec.template NewRelicAgent.podspec
-         REPLACE=X.XX
-         sed -i bak "s/$REPLACE/${{ env.version }}/g" NewRelicAgent.podspec
+    #      cp cocoapods/NewRelicAgent.podspec.template NewRelicAgent.podspec
+    #      REPLACE=X.XX
+    #      sed -i bak "s/$REPLACE/${{ env.version }}/g" NewRelicAgent.podspec
 
-         rm NewRelicAgent.podspecbak
+    #      rm NewRelicAgent.podspecbak
 
-         pod trunk push --allow-warnings NewRelicAgent.podspec
-      env:
-         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
+    #      pod trunk push --allow-warnings NewRelicAgent.podspec
+    #   env:
+    #      COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
 
-   # - name: Create Prod Package.swift for XCFramework version
-   #   run: |
-   #     cp main/NewRelic-SwiftPackage/Package.swift.template spm/Package.swift
-   #     cd spm
+   - name: Create Prod Package.swift for XCFramework version
+     run: |
+       cp main/NewRelic-SwiftPackage/Package.swift.template spm/Package.swift
+       cd spm
 
-   #     REPLACEVER={{VERSION}}
-   #     REPLACECHECKSUM={{CHECKSUM}}
+       REPLACEVER={{VERSION}}
+       REPLACECHECKSUM={{CHECKSUM}}
 
-   #     XCFRAMEWORK_NAME="NewRelic_XCFramework_Agent_${{ env.version }}.zip"
-   #     curl https://download.newrelic.com/ios_agent/$XCFRAMEWORK_NAME -o $XCFRAMEWORK_NAME
-   #     SPM_CHECKSUM=`swift package compute-checksum  ${XCFRAMEWORK_NAME}`
+       XCFRAMEWORK_NAME="NewRelic_XCFramework_Agent_${{ env.version }}.zip"
+       curl https://download.newrelic.com/ios_agent/$XCFRAMEWORK_NAME -o $XCFRAMEWORK_NAME
+       SPM_CHECKSUM=`swift package compute-checksum  ${XCFRAMEWORK_NAME}`
 
-   #     sed -i bak "s/$REPLACEVER/${{ env.version }}/g" Package.swift
-   #     sed -i -e "s/$REPLACECHECKSUM/$SPM_CHECKSUM/g" Package.swift
+       sed -i bak "s/$REPLACEVER/${{ env.version }}/g" Package.swift
+       sed -i -e "s/$REPLACECHECKSUM/$SPM_CHECKSUM/g" Package.swift
 
-   #     rm Package.swift-e
-   #     rm Package.swiftbak
+       rm Package.swift-e
+       rm Package.swiftbak
 
-   #     rm $XCFRAMEWORK_NAME
+       rm $XCFRAMEWORK_NAME
                 
-   #     git add Package.swift
-   #     git commit -m "Added build ${{ env.version }}"
-   #     git tag ${{ env.version }}
-   #     git push origin main --tags
+       git add Package.swift
+       git commit -m "Added build ${{ env.version }}"
+       git tag ${{ env.version }}
+       git push origin main --tags
 
-   #     cp Package.swift ../main/
+       cp Package.swift ../main/
 
      # At this point we have NewRelicAgent.podspec and Package.swift corresponding to the production build sitting at the repo root.
      # The following step creates a PR containing that new NewRelicAgent.podspec and Package.swift file at the root of the repo.
