--- a/Test Harness/NRTestApp/NRAPI-Info.plist
+++ b/Test Harness/NRTestApp/NRAPI-Info.plist
@@ -6,6 +6,8 @@
 	<string></string>
 	<key>collectorAddress</key>
 	<string></string>
+	<key>logIngestKey</key>
+	<string></string>
 	<key>NRAPIKey</key>
 	<string></string>
 </dict>
