--- a/.github/workflows/beta-tests.yml
+++ b/.github/workflows/beta-tests.yml
@@ -91,3 +91,29 @@ jobs:
 
     - name: Run tests on tvOS (using fastlane)
       run: bundle exec fastlane runTVOSBetaTests os_version:${{ github.event.inputs.os_version }}
+
+  testTVOSAppBeta:
+    name : TestTVOSBeta
+    # runs-on: will be set to macos-latest when running on actual GHA. 
+    # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
+    runs-on: macos-13 
+    steps:
+    - uses: actions/checkout@v3
+      with: 
+        submodules: true
+    
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: ${{ github.event.inputs.xcode_version }}
+
+    - name: Install lcov
+      run: brew install lcov
+
+    - name: Update gem
+      run: bundle update
+
+    - name: Install gems
+      run: bundle install
+
+    - name: Run app tests on tvOS (using fastlane)
+      run: bundle exec fastlane runTVOSAppBetaTests os_version:${{ github.event.inputs.os_version }}
