Fixed some typos

--- a/.github/workflows/beta-tests.yml
+++ b/.github/workflows/beta-tests.yml
@@ -96,7 +96,7 @@ jobs:
       run: bundle exec fastlane runTVOSBetaTests os_version:${{ github.event.inputs.os_version }}
 
   testTVOSAppBeta:
-    name : TestTVOSBeta
+    name : TestTVOSAppBeta
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-13 
