Adds Swifter, NRTestAppUITests, demonstrates testConnectRequest

--- a/Test Harness/NRTestApp/NRTestApp/Info.plist
+++ b/Test Harness/NRTestApp/NRTestApp/Info.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
