fix lcov installation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
         xcode-version: '14.3'
 
     - name: Install lcov
-      run: brew install lcov
+      run: |
+        curl https://raw.githubusercontent.com/Homebrew/homebrew-core/e92d2ae54954ebf485b484d8522104700b144fee/Formula/lcov.rb > lcov.rb
+        brew install ./lcov.rb
 
     - name: Update gem
       run: bundle update
