--- a/Test Harness/NRTestApp/NRAPI-Info.plist
+++ b/Test Harness/NRTestApp/NRAPI-Info.plist
@@ -8,6 +8,8 @@
 	<string></string>
 	<key>logIngestKey</key>
 	<string></string>
+	<key>logEntityGuid</key>
+	<string></string>
 	<key>NRAPIKey</key>
 	<string></string>
 </dict>
