[iOS] NR-178366: Log reporting (#169)
* [7.4.7-rc.589] Staging Release

* do cocoapods, then swift pm

* push SPM change for 7.4.7

* Branching from the main for beta tests (#133)

* Branching from the main for beta tests

* This should fix the tvOS beta not being found

* Added tvOS app tests

* Added a step to the app unit tests to add a secret api key

* Fixed some typos

* [7.4.7] Production Release (#159)

* [create-pull-request] automated change

* Fix auto-prod PR to include Cocoapod spec update

---------

Co-authored-by: cdillard-NewRelic <cdillard-NewRelic@users.noreply.github.com>
Co-authored-by: Chris Dillard <cdillard@newrelic.com>

* push log reporting back to working state

* Add entity.guid back into NRLogger payload.

* [7.4.8-rc.710] Staging Release

* Include Prod Podspec Job by default in productionDeploy

* Verbose logging to Loggin endpoint

* log sessionId on logs endpoint success

* ws fix

* push WIP for /connect config parse

* Code dynamic enable/disable of LogReporting based on connect response

* Remote logging config

* [create-pull-request] automated change

* Initial pass at handling 409 to reconnect and fetch new config

* Send Support Metric kNRMAConfigurationUpdated when Logging Config is updated

* Impl setLogEntityGuid

* feat: Remote Logging with manual set entityGuid and ingestKey feature complete.

* NR-220019: App Token auth

* NR-220019: Adds GHA for Bespoke Branch Based Build (#198)

* Add 100 logs test, fix levelToString for "level" attribute on log messages.

* NR-228761: Implement uploadQueue for log data, NRLoggerTests

* Logs fix

* Use correct endpoints for logging

* NR-223195: Support metric for success and failure remote logging

* NR-227297: logErrorObject impl, NR-227300: logAttributes impl

* Log attributes

* Temporarily remove LogReporting

* fix tvOS job Xcode version in GHA

---------

Co-authored-by: cdillard-NewRelic <cdilla

--- a/Test Harness/NRTestApp/NRAPI-Info.plist
+++ b/Test Harness/NRTestApp/NRAPI-Info.plist
@@ -6,7 +6,7 @@
 	<string></string>
 	<key>collectorAddress</key>
 	<string></string>
-	<key>logIngestKey</key>
+	<key>logEntityGuid</key>
 	<string></string>
 	<key>NRAPIKey</key>
 	<string></string>
