Fix cocoapods privacy manifest: Set s.resource_bundle for PrivacyInfo.xcprivacy in podpsec template

--- a/cocoapods/NewRelicAgent.podspec.template
+++ b/cocoapods/NewRelicAgent.podspec.template
@@ -15,4 +15,7 @@ Pod::Spec.new do |s|
   s.ios.frameworks         = "CoreTelephony"
   s.libraries              = "z","c++"
   s.requires_arc           = false
+  s.resource_bundle = {
+    "NewRelicAgent_Privacy" => 'PrivacyInfo.xcprivacy'
+  }
 end
