--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,12 +70,39 @@ jobs:
 
     - name: Run tests on tvOS (using fastlane)
       run: bundle exec fastlane runTVOSTests
+
+  testWatchOS:
+      name : TestWatchOS
+      # runs-on: will be set to macos-latest when running on actual GHA. 
+      # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
+      runs-on: macos-latest 
+      steps:
+      - uses: actions/checkout@v3
+        with: 
+          submodules: true
+      
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '14.3'
+
+      - name: Install lcov
+        run: brew install lcov
+
+      - name: Update gem
+        run: bundle update
+
+      - name: Install gems
+        run: bundle install
+
+      - name: Run tests on watchOS (using fastlane)
+        run: bundle exec fastlane runWatchOSTests
+
   deployS3:
     name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
     runs-on: macos-13 
-    needs: [testIOS, testTVOS]
+    needs: [testIOS, testTVOS, testWatchOS]
     if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main'
     outputs:
       version: ${{ steps.setOutput.outputs.version }}
