NR-294902 - Add watchOS to podspec
Added watchOS to list of supported platforms in podspec, and made SystemConfiguration framework specific for iOS, as it is.

--- a/cocoapods/NewRelicAgent.podspec.template
+++ b/cocoapods/NewRelicAgent.podspec.template
@@ -9,10 +9,10 @@ Pod::Spec.new do |s|
   s.source                 = { :http => "https://download.newrelic.com/ios_agent/NewRelic_XCFramework_Agent_X.XX.zip" }
   s.ios.deployment_target  = '9.0'
   s.tvos.deployment_target = '9.0'
+  s.watchos.deployment_target = '10.0'
   s.vendored_frameworks    = "NewRelic.xcframework"
   s.preserve_paths         = "*.xcframework"
-  s.frameworks             = "SystemConfiguration"
-  s.ios.frameworks         = "CoreTelephony"
+  s.ios.frameworks         = "CoreTelephony", "SystemConfiguration"
   s.libraries              = "z","c++"
   s.requires_arc           = false
 end
