--- a/NewRelic-SwiftPackage/Package.swift.template
+++ b/NewRelic-SwiftPackage/Package.swift.template
@@ -6,7 +6,7 @@ import PackageDescription
 let package = Package(
     name: "NewRelic",
     platforms: [
-        .iOS(.v9), .macOS(.v10_14)
+        .iOS(.v9), .macOS(.v10_14), .tvOS(.v9), .watchOS(.v10)
     ],
     products: [
         // Products define the executables and libraries a package produces, and make them visible to other packages.
