--- a/.github/workflows/beta-tests.yml
+++ b/.github/workflows/beta-tests.yml
@@ -14,7 +14,7 @@ jobs:
     name : TestIOSBeta
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-13 
+    runs-on: macos-latest 
     steps:
 
     - name: Print version info
@@ -44,7 +44,7 @@ jobs:
     name : TestIOSAppBeta
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-13 
+    runs-on: macos-latest 
     steps:
     - uses: actions/checkout@master
       with: 
@@ -73,7 +73,7 @@ jobs:
     name : TestTVOSBeta
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-13 
+    runs-on: macos-latest 
     steps:
     - uses: actions/checkout@v3
       with: 
@@ -99,7 +99,7 @@ jobs:
     name : TestTVOSAppBeta
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-13 
+    runs-on: macos-latest 
     steps:
     - uses: actions/checkout@v3
       with: 
