--- a/.github/workflows/branchBuild.yml
+++ b/.github/workflows/branchBuild.yml
@@ -15,7 +15,7 @@ jobs:
     name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-13 
+    runs-on: macos-latest 
     outputs:
       version: ${{ steps.setOutput.outputs.version }}
     steps:
@@ -25,7 +25,7 @@ jobs:
     
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '14.3'
+        xcode-version: '15.4'
 
     - name: Install the Apple certificate and provisioning profile
       env:
