--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     name : TestIOS 
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest 
+    runs-on: macos-13 
     steps:
     - uses: actions/checkout@master
       with: 
@@ -24,7 +24,7 @@ jobs:
     
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.4'
+        xcode-version: '14.3'
 
     - name: Install lcov
       run: |
@@ -40,11 +40,6 @@ jobs:
     - name: Run tests on iOS (using fastlane)
       run: bundle exec fastlane runIOSTests
 
-    - uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: coverage.xml
-
   testTVOS:
     name : TestTVOS
     # runs-on: will be set to macos-latest when running on actual GHA. 
@@ -57,7 +52,7 @@ jobs:
     
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.4'
+        xcode-version: '14.3'
 
     - name: Install lcov
       run: brew install lcov
@@ -83,7 +78,7 @@ jobs:
       
       - uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '15.4'
+          xcode-version: '14.3'
 
       - name: Install lcov
         run: brew install lcov
@@ -101,7 +96,7 @@ jobs:
     name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA. 
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest 
+    runs-on: macos-13 
     needs: [testIOS, testTVOS, testWatchOS]
     if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main'
     outputs:
@@ -113,7 +108,7 @@ jobs:
     
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '15.4'
+        xcode-version: '14.3'
 
     - name: Install the Apple certificate and provisioning profile
       env:
