--- a/.github/workflows/branchBuild.yml
+++ b/.github/workflows/branchBuild.yml
@@ -15,7 +15,7 @@ jobs:
     name: DeployS3
     # runs-on: will be set to macos-latest when running on actual GHA.
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest
+    runs-on: macos-15
     outputs:
       version: ${{ steps.setOutput.outputs.version }}
     steps:
