--- a/.github/workflows/beta-tests.yml
+++ b/.github/workflows/beta-tests.yml
@@ -1,5 +1,5 @@
 name: beta-tests
-on: 
+on:
   workflow_dispatch:
     inputs:
       xcode_version:
@@ -7,119 +7,118 @@ on:
         default: latest
       os_version:
         required: true
-        default: '17.0'
+        default: "17.0"
 
 jobs:
   testIOSBeta:
-    name : TestIOSBeta
-    # runs-on: will be set to macos-latest when running on actual GHA. 
+    name: TestIOSBeta
+    # runs-on: will be set to macos-latest when running on actual GHA.
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest 
+    runs-on: macos-15
     steps:
+      - name: Print version info
+        run: echo "version=${{ github.event.inputs.xcode_version }}"
 
-    - name: Print version info
-      run: echo "version=${{ github.event.inputs.xcode_version }}"
+      - uses: actions/checkout@master
+        with:
+          submodules: true
 
-    - uses: actions/checkout@master
-      with: 
-        submodules: true
-    
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: ${{ github.event.inputs.xcode_version }}
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ github.event.inputs.xcode_version }}
 
-    - name: Install lcov
-      run: brew install lcov
+      - name: Install lcov
+        run: brew install lcov
 
-    - name: Update gem
-      run: bundle update
+      - name: Update gem
+        run: bundle update
 
-    - name: Install gems
-      run: bundle install
+      - name: Install gems
+        run: bundle install
 
-    - name: Run tests on iOS (using fastlane)
-      run: bundle exec fastlane runIOSBetaTests os_version:${{ github.event.inputs.os_version }}
+      - name: Run tests on iOS (using fastlane)
+        run: bundle exec fastlane runIOSBetaTests os_version:${{ github.event.inputs.os_version }}
 
   testIOSAppBeta:
-    name : TestIOSAppBeta
-    # runs-on: will be set to macos-latest when running on actual GHA. 
+    name: TestIOSAppBeta
+    # runs-on: will be set to macos-latest when running on actual GHA.
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest 
+    runs-on: macos-15
     steps:
-    - uses: actions/checkout@master
-      with: 
-        submodules: true
-    
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: ${{ github.event.inputs.xcode_version }}
+      - uses: actions/checkout@master
+        with:
+          submodules: true
 
-    - name: Install lcov
-      run: brew install lcov
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ github.event.inputs.xcode_version }}
 
-    - name: Update gem
-      run: bundle update
+      - name: Install lcov
+        run: brew install lcov
 
-    - name: Install gems
-      run: bundle install
+      - name: Update gem
+        run: bundle update
 
-    - name: Run script to add New Relic API Key
-      run: bundle exec fastlane addAPIKeyToPlist valueToAdd:${{ secrets.NEWRELIC_API_KEY }}
+      - name: Install gems
+        run: bundle install
 
-    - name: Run app tests on iOS (using fastlane)
-      run: bundle exec fastlane runIOSAppBetaTests os_version:${{ github.event.inputs.os_version }}
+      - name: Run script to add New Relic API Key
+        run: bundle exec fastlane addAPIKeyToPlist valueToAdd:${{ secrets.NEWRELIC_API_KEY }}
+
+      - name: Run app tests on iOS (using fastlane)
+        run: bundle exec fastlane runIOSAppBetaTests os_version:${{ github.event.inputs.os_version }}
 
   testTVOSBeta:
-    name : TestTVOSBeta
-    # runs-on: will be set to macos-latest when running on actual GHA. 
+    name: TestTVOSBeta
+    # runs-on: will be set to macos-latest when running on actual GHA.
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest 
+    runs-on: macos-15
     steps:
-    - uses: actions/checkout@v3
-      with: 
-        submodules: true
-    
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: ${{ github.event.inputs.xcode_version }}
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
 
-    - name: Install lcov
-      run: brew install lcov
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ github.event.inputs.xcode_version }}
 
-    - name: Update gem
-      run: bundle update
+      - name: Install lcov
+        run: brew install lcov
 
-    - name: Install gems
-      run: bundle install
+      - name: Update gem
+        run: bundle update
 
-    - name: Run tests on tvOS (using fastlane)
-      run: bundle exec fastlane runTVOSBetaTests os_version:${{ github.event.inputs.os_version }}
+      - name: Install gems
+        run: bundle install
+
+      - name: Run tests on tvOS (using fastlane)
+        run: bundle exec fastlane runTVOSBetaTests os_version:${{ github.event.inputs.os_version }}
 
   testTVOSAppBeta:
-    name : TestTVOSAppBeta
-    # runs-on: will be set to macos-latest when running on actual GHA. 
+    name: TestTVOSAppBeta
+    # runs-on: will be set to macos-latest when running on actual GHA.
     # *** runs-on: ubuntu-latest is used when running via act on mac os. ***
-    runs-on: macos-latest 
+    runs-on: macos-15
     steps:
-    - uses: actions/checkout@v3
-      with: 
-        submodules: true
-    
-    - uses: maxim-lobanov/setup-xcode@v1
-      with:
-        xcode-version: ${{ github.event.inputs.xcode_version }}
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
 
-    - name: Install lcov
-      run: brew install lcov
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ github.event.inputs.xcode_version }}
 
-    - name: Update gem
-      run: bundle update
+      - name: Install lcov
+        run: brew install lcov
 
-    - name: Install gems
-      run: bundle install
+      - name: Update gem
+        run: bundle update
 
-    - name: Run script to add New Relic API Key
-      run: bundle exec fastlane addAPIKeyToPlist valueToAdd:${{ secrets.NEWRELIC_API_KEY }}
+      - name: Install gems
+        run: bundle install
 
-    - name: Run app tests on tvOS (using fastlane)
-      run: bundle exec fastlane runTVOSAppBetaTests os_version:${{ github.event.inputs.os_version }}
+      - name: Run script to add New Relic API Key
+        run: bundle exec fastlane addAPIKeyToPlist valueToAdd:${{ secrets.NEWRELIC_API_KEY }}
+
+      - name: Run app tests on tvOS (using fastlane)
+        run: bundle exec fastlane runTVOSAppBetaTests os_version:${{ github.event.inputs.os_version }}
