--- a/Test Harness/NRTestApp/NRTestApp.xcodeproj/xcshareddata/xcschemes/NRTestApp.xcscheme
+++ b/Test Harness/NRTestApp/NRTestApp.xcodeproj/xcshareddata/xcschemes/NRTestApp.xcscheme
@@ -3,8 +3,8 @@
    LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      parallelizeBuildables = "NO"
+      buildImplicitDependencies = "NO">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -28,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F8302B0A296F5EFB003EC291"
-               BuildableName = "NRTestAppTests.xctest"
-               BlueprintName = "NRTestAppTests"
-               ReferencedContainer = "container:NRTestApp.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
          <TestableReference
             skipped = "NO">
             <BuildableReference
