--- a/Test Harness/SessionReplayTest/SessionReplayTest.xcodeproj/xcshareddata/xcschemes/SessionReplayTest.xcscheme
+++ b/Test Harness/SessionReplayTest/SessionReplayTest.xcodeproj/xcshareddata/xcschemes/SessionReplayTest.xcscheme
@@ -37,14 +37,14 @@
       enableASanStackUseAfterReturn = "YES"
       enableThreadSanitizer = "YES"
       disableMainThreadChecker = "YES"
-      disablePerformanceAntipatternChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       enableGPUValidationMode = "1"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      disablePerformanceAntipatternChecker = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
